# zurich_local

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  start.md
.streamlit/: config.toml
airbyte/sources/: stadt_zuerich.yaml
src/dashboard/: app.py  pages.toml  style.py
src/dashboard/data/: load_data.py
src/dashboard/sites/: detail.py  list.py  map.py
src/helpers/: common.py
src/ingest/: ingest_data.py
src/transform/: dbt_runner.py  profiles.yml
src/transform/zurich_local/: .user.yml  dbt_project.yml  profiles.yml
src/transform/zurich_local/macros/: get_flat_json_col_keys.sql  get_non_json_cols.sql
src/transform/zurich_local/models/: sources.yml
src/transform/zurich_local/models/marts/: dim_categories.sql  dim_cities.sql  dim_custom_types.sql  dim_types.sql  fact_zurich_items.sql
src/transform/zurich_local/models/processed/: categories.sql  cities.sql  custom_types.sql  types.sql  zurich_items.sql
src/transform/zurich_local/models/staging/: sources.yml  stg_activities.sql  stg_bars.sql  stg_culture.sql  stg_dining.sql  stg_hotels.sql  stg_items_activities.sql  stg_items_bars.sql  stg_items_culture.sql  stg_items_dining.sql  stg_items_hotels.sql  stg_items_museums.sql  stg_items_nightlife.sql  stg_items_shopping.sql  stg_items_sights.sql  stg_items_sport.sql  stg_items_wellness.sql  stg_museums.sql  stg_nightlife.sql  stg_shopping.sql  stg_sights.sql  stg_sport.sql  stg_wellness.sql  test.sql
